tests/conformance/typecheck/invalid/type_mismatch_if_branches.ks
// EXPECT: Cannot unify
// Type mismatch: if branches must have same type
val x = if (True) 1 else False
